Link with Python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ add_subdirectory(third_party/fmt)
 add_subdirectory(third_party/glad)
 add_subdirectory(third_party/glfw)
 
+find_package(PythonInterp 3.6 REQUIRED)
+find_package(PythonLibs 3.6 REQUIRED)
+
 set(cozmo_SRC_FILES
         src/service/console.c
         src/service/monitor.c
@@ -23,4 +26,5 @@ set(cozmo_SRC_FILES
 
 add_executable(cozmo ${cozmo_SRC_FILES})
 set_target_properties(cozmo PROPERTIES C_STANDARD 99 CXX_STANDARD 14)
-target_link_libraries(cozmo PRIVATE fmt::fmt-header-only glad glfw)
+target_include_directories(cozmo PRIVATE ${PYTHON_INCLUDE_DIRS})
+target_link_libraries(cozmo PRIVATE fmt::fmt-header-only glad glfw ${PYTHON_LIBRARIES})
