Add NanoVG dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ project(Cozmonaut)
 add_subdirectory(third_party/fmt)
 add_subdirectory(third_party/glad)
 add_subdirectory(third_party/glfw)
+add_subdirectory(third_party/nanovg-cmake)
 
 find_package(PythonInterp 3.6 REQUIRED)
 find_package(PythonLibs 3.6 REQUIRED)
+find_package(Threads REQUIRED)
 
 set(cozmo_SRC_FILES
         src/service/console.c
@@ -27,4 +29,4 @@ set(cozmo_SRC_FILES
 add_executable(cozmo ${cozmo_SRC_FILES})
 set_target_properties(cozmo PROPERTIES C_STANDARD 99 CXX_STANDARD 14)
 target_include_directories(cozmo PRIVATE ${PYTHON_INCLUDE_DIRS})
-target_link_libraries(cozmo PRIVATE fmt::fmt-header-only glad glfw ${PYTHON_LIBRARIES})
+target_link_libraries(cozmo PRIVATE fmt::fmt-header-only glad glfw nanovg ${PYTHON_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
