--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(third_party/glad)
 add_subdirectory(third_party/glfw)
 add_subdirectory(third_party/nanovg-cmake)
 
+find_package(Curses REQUIRED)
 find_package(PythonInterp 3.6 REQUIRED)
 find_package(PythonLibs 3.6 REQUIRED)
 find_package(Threads REQUIRED)
@@ -28,5 +29,5 @@ set(cozmo_SRC_FILES
 
 add_executable(cozmo ${cozmo_SRC_FILES})
 set_target_properties(cozmo PROPERTIES C_STANDARD 99 CXX_STANDARD 14)
-target_include_directories(cozmo PRIVATE ${PYTHON_INCLUDE_DIRS})
-target_link_libraries(cozmo PRIVATE fmt::fmt-header-only glad glfw nanovg ${PYTHON_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_include_directories(cozmo PRIVATE ${CURSES_INCLUDE_DIR} ${PYTHON_INCLUDE_DIRS})
+target_link_libraries(cozmo PRIVATE fmt::fmt-header-only glad glfw nanovg ${CURSES_LIBRARY} ${PYTHON_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
